2010-12-11  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Memory leaks for QWebPageClient
        https://bugs.webkit.org/show_bug.cgi?id=50267

        Use OwnPtr to solve this memory leak issue.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::overlay):
        (QGraphicsWebViewPrivate::QWebViewPrivate::pageClient):
        (QGraphicsWebViewPrivate::syncLayers):
        (QGraphicsWebViewPrivate::updateResizesToContentsForPage):
        (QGraphicsWebViewPrivate::_q_scaleChanged):
        (QGraphicsWebViewPrivate::detachCurrentPage):
        * Api/qwebpage_p.h:
        * Api/qwebview.cpp:
        (QWebViewPrivate::detachCurrentPage):
        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::platformPageClient):
        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::setInputMethodState):
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin):

Canonical link: https://commits.webkit.org/64228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73867 268f45cc-cd09-0410-ab3c-d52691b4dbfc